# hawk

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: aabb.hpp  aarect.hpp  box.hpp  bvh.cpp  bvh.hpp  camera.hpp  color.hpp  constant_medium.hpp  hawk.h  hawk_stb.h  hittable.cpp  hittable.hpp  hittable_list.hpp  main.cpp  material.cpp  material.hpp  moving_sphere.hpp  perlin.hpp  ray.hpp  sphere.hpp  texture.cpp  texture.hpp  vec3.cpp  vec3.hpp
